<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">UniversityApplication</string>
    <string name="action_about">About</string>
    <string name="hello_world">Hello world!</string>
    <string name="app_id">487438814680627</string>
    <string name="map_link">http://www.en.m-tech.aau.dk/digitalAssets/10/10453_kort.jpg</string>
    <string name="Map">University map</string>

    <string-array name="university_array"></string-array>
    <string-array name="study_array"></string-array>

    <!-- values for calendar : -->
    <string name="itemCreateTodo">Create new Event</string>
    <string name="lblTodoTitle">Title:</string>
    <string name="lblTodoPriority">Priority:</string>
    <string name="lblTodoDueDate">Due date:</string>
    <string name="lblTodoDescription">Description:</string>
    <string name="btnOk">Ok</string>
    <string name="btnCancel">Cancel</string>
    <string name="dummyDescription">Description</string>
    <string name="action_logout">Log out</string>
    <string name="about_description_1"> Welcome to University Application, become more familiar to your University. 
        With University application you discover the social studying. 	</string>
    <string name="about_description_2">  \n\nVersion 1.0 \n Copyright University App </string>
    <string name="about_description_3">Aalborg University, 
            		Fredrik Bajers Vej 5, P.O. Box 159, DK - 9100 Aalborg, Denmark\n</string>
    <string name="about_description_4"> \nDeveloped by:\nWilliam Andujar\nHugo Brunie\nAliénor Didier\nJunjun Guo
            		\nLizeth Olarte\nMaurits Van der Goes</string>

</resources>